# uq-algorithm-selection

./: .gitignore  LICENSE  README.md  constants.py  main.py  pyproject.toml
config/: default_experiment.yaml  exp1_n_unique.yaml  exp2_n_repeat.yaml  exp3_inbetween_ood.yaml  exp4_two_feat.yaml  exp5_multi_target_distinct.yaml  exp5_multi_target_similar.yaml  experiment.yaml  experiment_features.yaml  experiment_instances.yaml  experiment_repeats.yaml  visualizations.mplstyle
notebooks/: 01_exp1_n_unique.ipynb  01_meta_model_benchmarking.ipynb  02_exp2_n_repeat.ipynb  02_hyperparameter_tuning.ipynb  02_result_visualizations.ipynb  03_exp3_inbetween_ood.ipynb  03_explore_results.ipynb  05_function_testing.ipynb  06_exp_eval_metrics.ipynb  07_derivation_dgp.ipynb  08_concept_figures.ipynb  08_hyperparameter_tuning.ipynb  09_concept_figures.ipynb
src/: constants.py  data_sampler.py  evaluation.py  logging.py  utils.py
src/archive/: cubic_single_feature_sampler.py  data_pipeline.py  linear_multi_feature_sampler.py  x3_sampler.py
src/archive/model_archive/: architectures.py  base_meta_model.py  (+5 more)
src/data_sampling/: data_sampler.py
src/models/: base_model.py  bbb.py  bnn.py  der.py  ensemble.py  evidential.py  layers.py  losses.py  mcdropout.py  mcdropout_bnn.py
src/utils/: utils_data.py  utils_derivation_dgp.py  utils_feature_comparison.py  utils_logging.py  utils_models.py  utils_pipeline.py  utils_results.py  utils_visualization.py
src/visualizations/: figure_saver.py  plot_dgp.py  plot_metrics.py  plot_model_comparison.py  plot_two_feat.py  plot_uq_multi.py
